# CalibreTools

./: .env  Calibre-CoverArt-Collation.pl  README  README.md  calibre_tag_tool.py  cli_wrapper.py  core_tag_tool.py  keep_only_these_tags.sh  list_calibre_tags.sh  pyproject.toml  remove_calibre_tag.sh  run_tag_tool.py  tag_cleanup_log_dryrun_20250420_215225.txt  tag_cleanup_log_live_20250420_215406.txt  tags.txt  undo_tag_changes.sh
