[tool.poetry]
name = "calibretools"
version = "0.1.0"
description = "assorted scripts for working with Calibre the eBook library"
authors = ["john Constable <john@kript.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^14.0.0"
dotenv = "^0.9.9"
calibre = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
